fix using lotr code without proxy, move to .getDeclaredConstructor().newInstance()